feat: Implement Google OAuth2 authentication
Integrates Google OAuth2 for user authentication and session management. This commit introduces necessary dependencies for handling authentication flows, including Google Auth library and session management.

The `.env.example` file has been updated to include new configuration variables for Google OAuth, session secrets, and application URLs. The server now includes API endpoints to initiate the Google OAuth flow and handle callbacks, setting up JWT tokens for authenticated sessions.

The `App.tsx` component has been updated to manage user authentication state, display login/logout options, and conditionally render UI elements based on the authentication status. The `types.ts` file has been updated to include the `User` interface.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-# Google Apps Script Web App URLs
-# You will get these after deploying the Apps Script code provided in the app.
-PATIENTS_SHEET_SCRIPT_URL=
-CONSULTATIONS_SHEET_SCRIPT_URL=
+# .env.example
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+SESSION_SECRET=a_random_secret_string
+APP_URL=https://ais-dev-mvqxu3niimh5wfvu2hvdxi-17425397729.us-east1.run.app
+PATIENTS_URL=https://script.google.com/macros/s/AKfycby0RXPjUYUxT2Hs3_kM2NAO4x9GJ78j-inwAGE06x6qTZtDBCIxvT7sohL6sZshLrf3/exec
+CONSULTATIONS_URL=https://script.google.com/macros/s/AKfycbzzMLb-Z-0HQRNXOcpjfyMCfCn1QvNh_1XxTvEUpRSTXSqhwSNTdR3gfvlMqd7iaEVj/exec
