--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@vitejs/plugin-react": "^5.0.4",
     "axios": "^1.13.5",
     "better-sqlite3": "^12.4.1",
+    "cookie-session": "^2.1.1",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "express-session": "^1.19.0",
+    "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "jspdf": "^4.2.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.546.0",
@@ -28,7 +32,10 @@
     "vite": "^6.2.0"
   },
   "devDependencies": {
+    "@types/cookie-session": "^2.0.49",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.14.0",
     "autoprefixer": "^10.4.21",
     "tailwindcss": "^4.1.14",
