feat: Update .env.example with clear descriptions
Adds comments and default values to environment variables in .env.example. This improves clarity for developers setting up the PawMed application, especially for Google OAuth and Google Sheets integration.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,17 @@
-# .env.example
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
-SESSION_SECRET=a_random_secret_string
-APP_URL=https://ais-dev-mvqxu3niimh5wfvu2hvdxi-17425397729.us-east1.run.app
-PATIENTS_URL=https://script.google.com/macros/s/AKfycby0RXPjUYUxT2Hs3_kM2NAO4x9GJ78j-inwAGE06x6qTZtDBCIxvT7sohL6sZshLrf3/exec
-CONSULTATIONS_URL=https://script.google.com/macros/s/AKfycbzzMLb-Z-0HQRNXOcpjfyMCfCn1QvNh_1XxTvEUpRSTXSqhwSNTdR3gfvlMqd7iaEVj/exec
+# Google OAuth Credentials (Get them from Google Cloud Console)
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# Security
+SESSION_SECRET=your_random_secure_string_here
+
+# Application URLs
+# APP_URL should be the public URL of your deployed application (no trailing slash)
+APP_URL=https://ais-pre-mvqxu3niimh5wfvu2hvdxi-17425397729.us-east1.run.app
+
+# Google Sheets Integration (URLs from "Deploy as Web App" in Apps Script)
+PATIENTS_URL=
+CONSULTATIONS_URL=
+
+# Gemini API (Optional, if using AI features)
+GEMINI_API_KEY=
