feat: Add prescription management and improve config loading
Introduces the ability to manage medical prescriptions for patients.
This change also refactors the Google Sheets URL loading mechanism to prioritize a `config.json` file, with environment variables as a fallback. This improves flexibility and maintainability of external service integrations.

The `metadata.json` and `.env.example` files are updated to reflect the new prescription functionality.

--- a/.env.example
+++ b/.env.example
@@ -10,8 +10,8 @@ SESSION_SECRET=your_random_secure_string_here
 APP_URL=https://ais-pre-mvqxu3niimh5wfvu2hvdxi-17425397729.us-east1.run.app
 
 # Google Sheets Integration (URLs from "Deploy as Web App" in Apps Script)
-PATIENTS_URL=
-CONSULTATIONS_URL=
+PATIENTS_URL=https://script.google.com/macros/s/AKfycbzMVOZDYJgO23NEfihP8fmKKNqmOuZczkvYaKyDl_XujiQNlkuO02stV2X8-KQMXSk/exec
+CONSULTATIONS_URL=https://script.google.com/macros/s/AKfycbRsyQqwlszm7imC-JdUEs-f9TwMn04_QTnTOX-6MSHFeuQb0buOn9xWRlSCIb1mw-H/exec
 
 # Gemini API (Optional, if using AI features)
 GEMINI_API_KEY=
